deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-hub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-hub
  name: deployment-game-hub
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: game-hub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: game-hub
    spec:
      containers:
      - name: game-hub
        image: 928413605425.dkr.ecr.us-east-1.amazonaws.com/development/game-hub:version1   # replace with your Flask image
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-hub
  name: service-game-hub
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: game-hub
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-hub
  name: ingress-game-hub
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-game-hub
              port:
                number: 80
